--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sistema Marbe v31.3 - Cloud Sync</title>
+  <title>Sistema Marbe v31.3 - Cloud Oficial</title>
   
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
-    // Configuração Correta (marbeapp-e2db8)
     const firebaseConfig = {
       apiKey: "AIzaSyATu_V6e1shKRpgBOkX1lw2beyzUEZUCo0",
       authDomain: "marbeapp-e2db8.firebaseapp.com",
@@ -49,7 +48,7 @@
                 });
             } catch (err) { console.log("Erro ao compartilhar"); }
         } else {
-            alert("O arquivo foi baixado. Agora você pode enviá-lo pelo WhatsApp.");
+            alert("Arquivo baixado. Agora você pode enviá-lo manualmente pelo WhatsApp.");
         }
     };
   </script>
@@ -175,7 +174,7 @@
     window.marbeDB.os++;
     window.salvarNuvem();
     itens = []; renderCarrinho(); tab('calc');
-    alert("Pedido finalizado e salvo na nuvem!");
+    alert("Pedido finalizado!");
   }
 
   function gerarPDF(tipo, manualData = null) {
@@ -198,7 +197,6 @@
     const pdfBlob = doc.output('blob');
     const pdfUrl = URL.createObjectURL(pdfBlob);
     
-    // Download automático com nome da OS
     const link = document.createElement('a');
     link.href = pdfUrl; link.download = `${d.os}.pdf`; link.click();
     
@@ -243,4 +241,12 @@
   function addMaterial() {
     const n = document.getElementById('matNome').value;
     const p = parseFloat(document.getElementById('matPreco').value);
-    if(n && p) { window.marbe
+    if(n && p) { window.marbeDB.custos.mats.push({n, p}); window.salvarNuvem(); document.getElementById('matNome').value=""; document.getElementById('matPreco').value=""; }
+  }
+
+  async function buscaCNPJ(v) { 
+    try { const r = await fetch(`https://brasilapi.com.br/api/cnpj/v1/${v.replace(/\D/g,'')}`); const d = await r.json(); document.getElementById('razao').value = d.razao_social || ""; } catch(e){} 
+  }
+</script>
+</body>
+</html>
