--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sistema Marbe v31.4 - PDF Corrigido</title>
+  <title>Sistema Marbe v31.5 - Produção + Zap</title>
   
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -31,10 +31,10 @@
 
     window.salvarNuvem = function() { set(ref(db, 'sistema/'), window.marbeDB); };
 
-    window.compartilharWhatsApp = async (blob, osNum, cliente) => {
+    window.compartilharWhatsApp = async (blob, osNum, cliente, tipo) => {
         const file = new File([blob], `${osNum}.pdf`, { type: 'application/pdf' });
         if (navigator.share) {
-            try { await navigator.share({ files: [file], title: `OS ${osNum}`, text: `Orçamento OS ${osNum} - ${cliente}` });
+            try { await navigator.share({ files: [file], title: `OS ${osNum}`, text: `${tipo} OS ${osNum} - ${cliente}` });
             } catch (err) { console.log("Erro share"); }
         }
     };
@@ -101,7 +101,7 @@
     <label>Prazo de Entrega</label><input type="text" id="prazo" value="10 DIAS UTEIS">
     <label>Pagamento</label><textarea id="pagamento" rows="2">50% + BOLETO 28DD APOS FATURAMENTO.</textarea>
     <h3 style="text-align:right">Total: <span id="totalOrc">R$ 0,00</span></h3>
-    <button class="btn" style="background:var(--danger)" onclick="gerarPDF('CLIENTE')">GERAR E COMPARTILHAR PDF</button>
+    <button class="btn" style="background:var(--danger)" onclick="gerarPDF('CLIENTE')">GERAR E ENVIAR PDF CLIENTE</button>
     <button class="btn" style="background:#333" onclick="finalizar()">FINALIZAR PEDIDO</button>
   </div>
 
@@ -126,7 +126,7 @@
 
   function updateUI() {
     document.getElementById('osNum').value = window.marbeDB.os;
-    document.getElementById('matSelect').innerHTML = window.marbeDB.custos.mats.map(m => `<option value="${m.p}">${m.n}</option>`).join('');
+    document.getElementById('matSelect').innerHTML = (window.marbeDB.custos.mats || []).map(m => `<option value="${m.p}">${m.n}</option>`).join('');
     renderCustos(); renderReceber(); renderHist();
   }
 
@@ -154,26 +154,16 @@
   function finalizar() {
     window.marbeDB.vendas.push({ os: window.marbeDB.os, cliente: document.getElementById('razao').value, total: parseFloat(document.getElementById('totalOrc').innerText.replace("R$ ","")), itens: [...itens], frete: document.getElementById('frete').value, garantia: document.getElementById('garantia').value, prazo: document.getElementById('prazo').value, pagamento: document.getElementById('pagamento').value });
     window.marbeDB.financeiro.push({ os: window.marbeDB.os, cliente: document.getElementById('razao').value, valor: parseFloat(document.getElementById('totalOrc').innerText.replace("R$ ","")), pago: false });
-    window.marbeDB.os++; window.salvarNuvem(); alert("Salvo na Nuvem!"); tab('calc');
+    window.marbeDB.os++; window.salvarNuvem(); alert("Salvo na Nuvem!"); itens=[]; renderCarrinho(); tab('calc');
   }
 
-  // --- CORREÇÃO DO PDF: INCLUSÃO DO PRAZO ---
   function gerarPDF(tipo, manualData = null) {
     const { jsPDF } = window.jspdf;
     const doc = new jsPDF();
-    const d = manualData || { 
-        os: document.getElementById('osNum').value, 
-        cliente: document.getElementById('razao').value, 
-        itens: [...itens], 
-        total: document.getElementById('totalOrc').innerText,
-        prazo: document.getElementById('prazo').value,
-        garantia: document.getElementById('garantia').value,
-        frete: document.getElementById('frete').value,
-        pagamento: document.getElementById('pagamento').value
-    };
+    const d = manualData || { os: document.getElementById('osNum').value, cliente: document.getElementById('razao').value, itens: [...itens], total: document.getElementById('totalOrc').innerText, prazo: document.getElementById('prazo').value, garantia: document.getElementById('garantia').value, frete: document.getElementById('frete').value, pagamento: document.getElementById('pagamento').value };
     
     doc.setFontSize(14); doc.text("S B COMERCIO DE BORRACHAS E SERVICOS LTDA", 20, 20);
-    doc.setFontSize(10); doc.text(`OS: ${d.os} | CLIENTE: ${d.cliente}`, 20, 30);
+    doc.setFontSize(10); doc.text(`${tipo === 'CLIENTE' ? 'ORCAMENTO' : 'VIA PRODUCAO'} - OS: ${d.os} | CLIENTE: ${d.cliente}`, 20, 30);
     
     let head = [['Descricao', 'Medidas', 'Qtd', 'Unit', 'Total']];
     let body = d.itens.map(i => [i.n, i.med, i.q, i.v.toFixed(2), (i.v*i.q).toFixed(2)]);
@@ -198,11 +188,11 @@
     const pdfBlob = doc.output('blob');
     const link = document.createElement('a');
     link.href = URL.createObjectURL(pdfBlob); link.download = `${d.os}.pdf`; link.click();
-    if(confirm("Compartilhar no WhatsApp?")) window.compartilharWhatsApp(pdfBlob, d.os, d.cliente);
+    if(confirm("Compartilhar no WhatsApp?")) window.compartilharWhatsApp(pdfBlob, d.os, d.cliente, tipo);
   }
 
   function renderReceber() {
-    document.getElementById('listaBoletos').innerHTML = window.marbeDB.financeiro.map((f, i) => `
+    document.getElementById('listaBoletos').innerHTML = (window.marbeDB.financeiro || []).map((f, i) => `
       <div class="card-list" style="border-left-color: ${f.pago ? 'green' : 'red'}">
         <strong>${f.cliente}</strong> | OS: ${f.os}<br>R$ ${f.valor.toFixed(2)}
         ${f.pago ? '<b style="float:right;color:green">PAGO</b>' : `<button onclick="window.marbeDB.financeiro[${i}].pago=true; window.salvarNuvem();" style="float:right; background:green; color:white; border:none; padding:5px; border-radius:4px;">Baixar</button>`}
@@ -210,16 +200,43 @@
   }
 
   function renderHist() {
-    document.getElementById('listaHist').innerHTML = window.marbeDB.vendas.slice().reverse().map((v, i) => {
+    document.getElementById('listaHist').innerHTML = (window.marbeDB.vendas || []).slice().reverse().map((v, i) => {
         const idx = window.marbeDB.vendas.length - 1 - i;
         return `<div class="card-list">
             <strong>${v.cliente}</strong> (OS: ${v.os})<br>
             <button onclick="reimprimir(${idx}, 'CLIENTE')">PDF Cliente</button>
-            <button onclick="reimprimir(${idx}, 'FUNCIONARIO')" style="background:var(--info); color:white;">Planilha Func.</button>
+            <button onclick="reimprimir(${idx}, 'FUNCIONARIO')" style="background:var(--info); color:white;">PDF Produção</button>
         </div>`;
     }).join('');
   }
 
   function reimprimir(i, t) {
     const v = window.marbeDB.vendas[i];
-    gerarPDF(t,
+    gerarPDF(t, { os: v.os, cliente: v.cliente, itens: v.itens, total: "R$ "+v.total.toFixed(2), prazo: v.prazo, garantia: v.garantia, frete: v.frete, pagamento: v.pagamento });
+  }
+
+  function renderCustos() {
+    document.getElementById('listaCustos').innerHTML = (window.marbeDB.custos.mats || []).map((m, i) => `
+      <div style="display:flex; gap:10px; margin-bottom:5px;">
+        <input type="text" value="${m.n}" readonly style="flex:2">
+        <input type="number" value="${m.p}" readonly style="flex:1">
+        <button onclick="window.marbeDB.custos.mats.splice(${i},1); window.salvarNuvem()" style="background:red; color:white; border:none; padding:5px;">X</button>
+      </div>`).join('');
+  }
+
+  function addMaterial() {
+    const n = document.getElementById('matNome').value;
+    const p = parseFloat(document.getElementById('matPreco').value);
+    if(n && p) { 
+        if(!window.marbeDB.custos.mats) window.marbeDB.custos.mats = [];
+        window.marbeDB.custos.mats.push({n, p}); window.salvarNuvem(); 
+        document.getElementById('matNome').value=""; document.getElementById('matPreco').value=""; 
+    }
+  }
+
+  async function buscaCNPJ(v) { 
+    try { const r = await fetch(`https://brasilapi.com.br/api/cnpj/v1/${v.replace(/\D/g,'')}`); const d = await r.json(); document.getElementById('razao').value = d.razao_social || ""; } catch(e){} 
+  }
+</script>
+</body>
+</html>
