--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sistema Marbe v31.22 - Download Direto</title>
+  <title>Sistema Marbe v31.23 - Download Local</title>
   
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -36,24 +36,9 @@
 
     window.salvarNuvem = function() { set(ref(db, 'sistema/'), window.marbeDB); };
 
-    // FUNÇÃO DE DOWNLOAD E COMPARTILHAMENTO CORRIGIDA
-    window.gerarArquivoFinal = async (blob, osNum) => {
+    // FUNÇÃO EXCLUSIVA DE DOWNLOAD LOCAL
+    window.baixarPDF = (blob, osNum) => {
         const nomeArquivo = `${osNum}.pdf`;
-        const file = new File([blob], nomeArquivo, { type: 'application/pdf' });
-
-        // Tenta compartilhar primeiro (Funciona no celular/App)
-        if (navigator.share && navigator.canShare({ files: [file] })) {
-            try {
-                await navigator.share({
-                    files: [file],
-                    title: `OS ${osNum}`,
-                    text: `Documento Marbe`
-                });
-                return;
-            } catch (err) { console.log("Share cancelado, tentando download..."); }
-        }
-
-        // Se o share falhar ou estiver no Navegador (PC), faz o download direto
         const url = window.URL.createObjectURL(blob);
         const a = document.createElement('a');
         a.style.display = 'none';
@@ -61,8 +46,10 @@
         a.download = nomeArquivo;
         document.body.appendChild(a);
         a.click();
-        window.URL.revokeObjectURL(url);
-        document.body.removeChild(a);
+        setTimeout(() => {
+            window.URL.revokeObjectURL(url);
+            document.body.removeChild(a);
+        }, 100);
     };
   </script>
 
@@ -80,7 +67,7 @@
     .section.active { display: block; }
     label { display: block; margin-top: 10px; font-weight: bold; font-size: 11px; }
     input, select, textarea { width: 100%; padding: 8px; margin-top: 5px; border: 1px solid #ccc; border-radius: 5px; font-size: 14px; box-sizing: border-box; }
-    .btn { width: 100%; padding: 10px; border: none; border-radius: 6px; cursor: pointer; font-weight: bold; margin-top: 8px; color: white; }
+    .btn { width: 100%; padding: 10px; border: none; border-radius: 6px; cursor: pointer; font-weight: bold; margin-top: 8px; color: white; text-align: center; display: block; }
     table { width: 100%; border-collapse: collapse; font-size: 11px; margin-top: 10px; }
     table th, table td { border: 1px solid #ddd; padding: 6px; text-align: left; }
     .card-list { background: #fff; border: 1px solid #ddd; padding: 12px; border-radius: 8px; margin-bottom: 10px; border-left: 5px solid #ccc; }
@@ -109,7 +96,7 @@
     </div>
     <label>Material</label><select id="matSelect"></select>
     <label>Tipo</label><select id="tipoServ"><option value="0.045">PEÇA NOVA</option><option value="0.065">REFORMA</option></select>
-    <button class="btn" style="background:var(--success)" onclick="calcular()">ADICIONAR ITEM</button>
+    <button class="btn" style="background:var(--success)" onclick="calcular()">CALCULAR E ADICIONAR</button>
   </div>
 
   <div id="orc" class="section">
@@ -156,82 +143,4 @@
             <td><input type="text" class="editable-input" value="${it.n}" onchange="itensTemp[${i}].n=this.value"></td>
             <td><input type="text" class="editable-input" value="${it.med}" onchange="itensTemp[${i}].med=this.value"></td>
             <td><input type="text" class="editable-input" value="${it.e}" onchange="itensTemp[${i}].e=this.value"></td>
-            <td><input type="number" class="editable-input" value="${it.q}" onchange="itensTemp[${i}].q=parseInt(this.value); renderTabelaAtual()"></td>
-            <td><input type="number" class="editable-input" value="${it.v.toFixed(2)}" onchange="itensTemp[${i}].v=parseFloat(this.value); renderTabelaAtual()"></td>
-            <td onclick="itensTemp.splice(${i},1);renderTabelaAtual()">X</td>
-        </tr>`;
-    }).join('');
-    document.getElementById('totalOrc').innerText = "R$ " + total.toFixed(2);
-  }
-
-  function salvarOrcamento() {
-    window.marbeDB.orçamentos.push({ os: window.marbeDB.os, cliente: document.getElementById('razao').value, itens: [...itensTemp], total: itensTemp.reduce((a,b)=>a+(b.v*b.q),0) });
-    window.marbeDB.os++; window.salvarNuvem(); itensTemp = []; renderTabelaAtual(); tab('historico');
-  }
-
-  function renderOrcamentos() {
-    document.getElementById('listaOrcamentos').innerHTML = window.marbeDB.orçamentos.map((o, i) => `
-      <div class="card-list">
-        <strong>OS: ${o.os} - ${o.cliente}</strong><br>
-        <button class="btn" style="background:var(--info)" onclick="gerarPDF('CLIENTE', ${i})">PDF CLIENTE</button>
-        <button class="btn" style="background:var(--dark)" onclick="gerarPDF('PRODUCAO', ${i})">PDF PRODUCAO</button>
-        <button class="btn" style="background:var(--success)" onclick="fecharPedido(${i})">FECHAR VENDA / PEDIDO</button>
-      </div>`).join('');
-  }
-
-  function gerarPDF(tipo, index) {
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
-    const d = window.marbeDB.orçamentos[index];
-    const clean = (t) => t ? t.normalize("NFD").replace(/[\u0300-\u036f]/g, "").toUpperCase() : "";
-
-    doc.setFontSize(14); doc.text("S B COMERCIO DE BORRACHAS E SERVICOS LTDA", 20, 20);
-    if(tipo === 'PRODUCAO') {
-        doc.text(`VIA PRODUCAO - OS: ${d.os}`, 20, 30);
-        doc.autoTable({ startY: 40, head: [['ITEM', 'MEDIDAS', 'QTD', 'PESO']], body: d.itens.map(i => [clean(i.n), i.med, i.q, (i.kg_unit * 1.2 * i.q).toFixed(2) + " KG"]) });
-    } else {
-        doc.text(`ORCAMENTO - OS: ${d.os} | CLIENTE: ${clean(d.cliente)}`, 20, 30);
-        doc.autoTable({ startY: 40, head: [['DESCRICAO', 'MEDIDAS', 'QTD', 'TOTAL']], body: d.itens.map(i => [clean(i.n), i.med, i.q, (i.v*i.q).toFixed(2)]) });
-    }
-    window.gerarArquivoFinal(doc.output('blob'), d.os);
-  }
-
-  function fecharPedido(i) {
-    const orc = window.marbeDB.orçamentos.splice(i, 1)[0];
-    window.marbeDB.pedidos.push(orc); window.salvarNuvem(); tab('pedidos');
-  }
-
-  function renderPedidos() {
-    document.getElementById('listaPedidos').innerHTML = window.marbeDB.pedidos.map((p, i) => `
-      <div class="card-list">
-        <strong>OS: ${p.os} - ${p.cliente}</strong><br>
-        <input type="text" id="nf_${i}" placeholder="NF">
-        <input type="number" id="parc_${i}" placeholder="Parc." style="width:40%">
-        <input type="date" id="data_${i}" style="width:40%">
-        <button class="btn" style="background:var(--primary)" onclick="faturar(${i})">FATURAR</button>
-      </div>`).join('');
-  }
-
-  function faturar(i) {
-    const nf = document.getElementById(`nf_${i}`).value;
-    const qtd = parseInt(document.getElementById(`parc_${i}`).value);
-    const data = new Date(document.getElementById(`data_${i}`).value);
-    if(!nf || !qtd) return alert("Erro");
-    const p = window.marbeDB.pedidos[i];
-    for(let j=0; j<qtd; j++) {
-        let v = new Date(data); v.setMonth(venc.getMonth() + j);
-        window.marbeDB.financeiro.push({ os: p.os, nf: nf, cliente: p.cliente, valor: p.total/qtd, venc: v.toLocaleDateString(), pago: false });
-    }
-    window.marbeDB.pedidos.splice(i, 1); window.salvarNuvem(); tab('financeiro');
-  }
-
-  function renderBoletos() {
-    document.getElementById('listaBoletos').innerHTML = window.marbeDB.financeiro.map((f, i) => `
-      <div class="card-list" style="border-left-color:${f.pago?'green':'red'}">
-        ${f.cliente} | R$ ${f.valor.toFixed(2)} | Venc: ${f.venc}
-        <button onclick="window.marbeDB.financeiro[i].pago=true; window.salvarNuvem();" style="float:right">Baixar</button>
-      </div>`).join('');
-  }
-</script>
-</body>
-</html>
+            <td><input type="number" class="editable-input"
