--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sistema Marbe v31.23 - Download Local</title>
+  <title>Sistema Marbe v31.24 - UNLOCK</title>
   
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -23,33 +23,36 @@
     const db = getDatabase(app);
     window.marbeDB = { os: 330, orçamentos: [], pedidos: [], financeiro: [], custos: {vh: 50, mats: []} };
 
-    onValue(ref(db, 'sistema/'), (snapshot) => {
-      const data = snapshot.val();
-      if (data) { 
-          window.marbeDB = data; 
-          if(!window.marbeDB.orçamentos) window.marbeDB.orçamentos = [];
-          if(!window.marbeDB.pedidos) window.marbeDB.pedidos = [];
-          if(!window.marbeDB.financeiro) window.marbeDB.financeiro = [];
-          updateUI(); 
-      }
+    // Conexão com tratamento de erro para não travar
+    const dbRef = ref(db, 'sistema/');
+    onValue(dbRef, (snapshot) => {
+      try {
+        const data = snapshot.val();
+        if (data) { 
+            window.marbeDB = data; 
+            if(!window.marbeDB.orçamentos) window.marbeDB.orçamentos = [];
+            if(!window.marbeDB.pedidos) window.marbeDB.pedidos = [];
+            if(!window.marbeDB.financeiro) window.marbeDB.financeiro = [];
+            if(!window.marbeDB.custos.mats) window.marbeDB.custos.mats = [];
+            updateUI(); 
+        } else {
+            window.salvarNuvem(); // Cria estrutura inicial se estiver vazio
+        }
+      } catch(e) { console.error("Erro ao carregar dados", e); }
     });
 
     window.salvarNuvem = function() { set(ref(db, 'sistema/'), window.marbeDB); };
 
-    // FUNÇÃO EXCLUSIVA DE DOWNLOAD LOCAL
     window.baixarPDF = (blob, osNum) => {
         const nomeArquivo = `${osNum}.pdf`;
         const url = window.URL.createObjectURL(blob);
         const a = document.createElement('a');
-        a.style.display = 'none';
         a.href = url;
         a.download = nomeArquivo;
         document.body.appendChild(a);
         a.click();
-        setTimeout(() => {
-            window.URL.revokeObjectURL(url);
-            document.body.removeChild(a);
-        }, 100);
+        window.URL.revokeObjectURL(url);
+        document.body.removeChild(a);
     };
   </script>
 
@@ -83,6 +86,7 @@
     <button class="tab-btn" onclick="tab('historico')">Histórico</button>
     <button class="tab-btn" onclick="tab('pedidos')" style="background:var(--dark); color:white;">Pedidos/NF</button>
     <button class="tab-btn" onclick="tab('financeiro')" style="background:var(--success); color:white;">Boletos</button>
+    <button class="tab-btn" onclick="tab('cfg')">Custos</button>
   </div>
 
   <div id="calc" class="section active">
@@ -112,6 +116,15 @@
   <div id="historico" class="section"><div id="listaOrcamentos"></div></div>
   <div id="pedidos" class="section"><div id="listaPedidos"></div></div>
   <div id="financeiro" class="section"><div id="listaBoletos"></div></div>
+
+  <div id="cfg" class="section">
+    <div id="listaCustos"></div>
+    <div style="background:#eee; padding:10px; border-radius:8px; margin-top:10px;">
+        <input type="text" id="matNome" placeholder="Material">
+        <input type="number" id="matPreco" placeholder="Preço KG">
+        <button class="btn" style="background:var(--success)" onclick="addMaterial()">CADASTRAR MATERIAL</button>
+    </div>
+  </div>
 </div>
 
 <script>
@@ -123,12 +136,14 @@
   }
 
   function updateUI() {
-    document.getElementById('matSelect').innerHTML = (window.marbeDB.custos.mats || []).map(m => `<option value="${m.p}">${m.n}</option>`).join('');
-    renderOrcamentos(); renderPedidos(); renderBoletos();
+    const sel = document.getElementById('matSelect');
+    if(sel) sel.innerHTML = (window.marbeDB.custos.mats || []).map(m => `<option value="${m.p}">${m.n}</option>`).join('');
+    renderOrcamentos(); renderPedidos(); renderBoletos(); renderCustos();
   }
 
   function calcular() {
     const d=parseFloat(document.getElementById('d').value), l=parseFloat(document.getElementById('l').value), e=parseFloat(document.getElementById('e').value), pk=parseFloat(document.getElementById('matSelect').value), h=parseFloat(document.getElementById('h').value), imp=parseFloat(document.getElementById('tipoServ').value);
+    if(isNaN(pk)) return alert("Cadastre um material primeiro na aba Custos!");
     const pesoUnit = Math.ceil((Math.PI*(d+e)*l*e)*1200/1000000000);
     const unit = (((pesoUnit*pk*1.1)+(h*window.marbeDB.custos.vh))*2.5)*(1+imp);
     itensTemp.push({ n: "Revestimento " + document.getElementById('matSelect').options[document.getElementById('matSelect').selectedIndex].text, med: d + "x" + l + "mm", e: e + "mm", q: 1, v: unit, kg_unit: pesoUnit });
@@ -143,4 +158,100 @@
             <td><input type="text" class="editable-input" value="${it.n}" onchange="itensTemp[${i}].n=this.value"></td>
             <td><input type="text" class="editable-input" value="${it.med}" onchange="itensTemp[${i}].med=this.value"></td>
             <td><input type="text" class="editable-input" value="${it.e}" onchange="itensTemp[${i}].e=this.value"></td>
-            <td><input type="number" class="editable-input"
+            <td><input type="number" class="editable-input" value="${it.q}" onchange="itensTemp[${i}].q=parseInt(this.value); renderTabelaAtual()"></td>
+            <td><input type="number" class="editable-input" value="${it.v.toFixed(2)}" onchange="itensTemp[${i}].v=parseFloat(this.value); renderTabelaAtual()"></td>
+            <td onclick="itensTemp.splice(${i},1);renderTabelaAtual()">X</td>
+        </tr>`;
+    }).join('');
+    document.getElementById('totalOrc').innerText = "R$ " + total.toFixed(2);
+  }
+
+  function salvarOrcamento() {
+    if(!itensTemp.length) return alert("Adicione itens!");
+    window.marbeDB.orçamentos.push({ os: window.marbeDB.os, cliente: document.getElementById('razao').value || "Cliente", itens: JSON.parse(JSON.stringify(itensTemp)), total: itensTemp.reduce((a,b)=>a+(b.v*b.q),0) });
+    window.marbeDB.os++; window.salvarNuvem(); 
+    itensTemp = []; renderTabelaAtual(); tab('historico');
+  }
+
+  function renderOrcamentos() {
+    document.getElementById('listaOrcamentos').innerHTML = (window.marbeDB.orçamentos || []).map((o, i) => `
+      <div class="card-list">
+        <strong>OS: ${o.os} - ${o.cliente}</strong><br>
+        <button class="btn" style="background:var(--info); display:inline-block; width:48%" onclick="gerarPDF('CLIENTE', ${i})">PDF CLIENTE</button>
+        <button class="btn" style="background:var(--dark); display:inline-block; width:48%" onclick="gerarPDF('PRODUCAO', ${i})">PDF PRODUÇÃO</button>
+        <button class="btn" style="background:var(--success)" onclick="fecharPedido(${i})">FECHAR VENDA / PEDIDO</button>
+      </div>`).join('');
+  }
+
+  function gerarPDF(tipo, index) {
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
+    const d = window.marbeDB.orçamentos[index];
+    const clean = (t) => t ? t.normalize("NFD").replace(/[\u0300-\u036f]/g, "").toUpperCase() : "";
+
+    doc.setFontSize(14); doc.text("S B COMERCIO DE BORRACHAS E SERVICOS LTDA", 20, 20);
+    if(tipo === 'PRODUCAO') {
+        doc.text(`VIA PRODUCAO - OS: ${d.os}`, 20, 30);
+        doc.autoTable({ startY: 40, head: [['ITEM', 'MEDIDAS', 'QTD', 'PESO']], body: d.itens.map(i => [clean(i.n), i.med, i.q, (i.kg_unit * 1.2 * i.q).toFixed(2) + " KG"]) });
+    } else {
+        doc.text(`ORCAMENTO - OS: ${d.os} | CLIENTE: ${clean(d.cliente)}`, 20, 30);
+        doc.autoTable({ startY: 40, head: [['DESCRICAO', 'MEDIDAS', 'QTD', 'TOTAL']], body: d.itens.map(i => [clean(i.n), i.med, i.q, (i.v*i.q).toFixed(2)]) });
+    }
+    window.baixarPDF(doc.output('blob'), d.os);
+  }
+
+  function fecharPedido(i) {
+    const orc = window.marbeDB.orçamentos.splice(i, 1)[0];
+    window.marbeDB.pedidos.push(orc); window.salvarNuvem(); tab('pedidos');
+  }
+
+  function renderPedidos() {
+    document.getElementById('listaPedidos').innerHTML = (window.marbeDB.pedidos || []).map((p, i) => `
+      <div class="card-list">
+        <strong>OS: ${p.os} - ${p.cliente}</strong><br>
+        <input type="text" id="nf_${i}" placeholder="NF">
+        <input type="number" id="parc_${i}" placeholder="Parc." style="width:40%">
+        <input type="date" id="data_${i}" style="width:50%">
+        <button class="btn" style="background:var(--primary)" onclick="faturar(${i})">FATURAR</button>
+      </div>`).join('');
+  }
+
+  function faturar(i) {
+    const nf = document.getElementById(`nf_${i}`).value;
+    const qtd = parseInt(document.getElementById(`parc_${i}`).value);
+    const dt = document.getElementById(`data_${i}`).value;
+    if(!nf || !qtd || !dt) return alert("Preencha NF, Parcelas e Data!");
+    const p = window.marbeDB.pedidos[i];
+    const dataBase = new Date(dt + "T12:00:00");
+    for(let j=0; j<qtd; j++) {
+        let v = new Date(dataBase); v.setMonth(v.getMonth() + j);
+        window.marbeDB.financeiro.push({ os: p.os, nf: nf, cliente: p.cliente, valor: p.total/qtd, venc: v.toLocaleDateString('pt-BR'), pago: false });
+    }
+    window.marbeDB.pedidos.splice(i, 1); window.salvarNuvem(); tab('financeiro');
+  }
+
+  function renderBoletos() {
+    document.getElementById('listaBoletos').innerHTML = (window.marbeDB.financeiro || []).map((f, i) => `
+      <div class="card-list" style="border-left-color:${f.pago?'green':'red'}">
+        <strong>${f.cliente}</strong><br>OS: ${f.os} | NF: ${f.nf} | R$ ${f.valor.toFixed(2)} | Venc: ${f.venc}
+        ${f.pago ? '' : `<button class="btn" style="background:green; width:auto; display:inline-block; padding:5px; margin:0; float:right" onclick="window.marbeDB.financeiro[${i}].pago=true; window.salvarNuvem();">Baixar</button>`}
+      </div>`).join('');
+  }
+
+  function renderCustos() {
+    document.getElementById('listaCustos').innerHTML = (window.marbeDB.custos.mats || []).map((m, i) => `
+      <div style="display:flex; gap:10px; margin-bottom:5px;">
+        <input type="text" value="${m.n}" readonly style="flex:2">
+        <input type="number" value="${m.p}" readonly style="flex:1">
+        <button onclick="window.marbeDB.custos.mats.splice(${i},1); window.salvarNuvem()" style="background:red; color:white; border:none; padding:5px; border-radius:4px;">X</button>
+      </div>`).join('');
+  }
+
+  function addMaterial() {
+    const n = document.getElementById('matNome').value;
+    const p = parseFloat(document.getElementById('matPreco').value);
+    if(n && p) { window.marbeDB.custos.mats.push({n, p}); window.salvarNuvem(); document.getElementById('matNome').value=""; document.getElementById('matPreco').value=""; }
+  }
+</script>
+</body>
+</html>
