--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sistema Marbe v31.24 - UNLOCK</title>
+  <title>Sistema Marbe v31.25 - Versão Definitiva</title>
   
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -23,22 +23,16 @@
     const db = getDatabase(app);
     window.marbeDB = { os: 330, orçamentos: [], pedidos: [], financeiro: [], custos: {vh: 50, mats: []} };
 
-    // Conexão com tratamento de erro para não travar
-    const dbRef = ref(db, 'sistema/');
-    onValue(dbRef, (snapshot) => {
-      try {
-        const data = snapshot.val();
-        if (data) { 
-            window.marbeDB = data; 
-            if(!window.marbeDB.orçamentos) window.marbeDB.orçamentos = [];
-            if(!window.marbeDB.pedidos) window.marbeDB.pedidos = [];
-            if(!window.marbeDB.financeiro) window.marbeDB.financeiro = [];
-            if(!window.marbeDB.custos.mats) window.marbeDB.custos.mats = [];
-            updateUI(); 
-        } else {
-            window.salvarNuvem(); // Cria estrutura inicial se estiver vazio
-        }
-      } catch(e) { console.error("Erro ao carregar dados", e); }
+    onValue(ref(db, 'sistema/'), (snapshot) => {
+      const data = snapshot.val();
+      if (data) { 
+          window.marbeDB = data; 
+          if(!window.marbeDB.orçamentos) window.marbeDB.orçamentos = [];
+          if(!window.marbeDB.pedidos) window.marbeDB.pedidos = [];
+          if(!window.marbeDB.financeiro) window.marbeDB.financeiro = [];
+          if(!window.marbeDB.custos.mats) window.marbeDB.custos.mats = [];
+          updateUI(); 
+      }
     });
 
     window.salvarNuvem = function() { set(ref(db, 'sistema/'), window.marbeDB); };
@@ -47,8 +41,7 @@
         const nomeArquivo = `${osNum}.pdf`;
         const url = window.URL.createObjectURL(blob);
         const a = document.createElement('a');
-        a.href = url;
-        a.download = nomeArquivo;
+        a.href = url; a.download = nomeArquivo;
         document.body.appendChild(a);
         a.click();
         window.URL.revokeObjectURL(url);
@@ -104,11 +97,19 @@
   </div>
 
   <div id="orc" class="section">
+    <label>CNPJ Cliente</label><input type="text" id="cnpj" onblur="buscaCNPJ(this.value)">
     <label>Razão Social</label><input type="text" id="razao">
     <table>
         <thead><tr><th>Descrição</th><th>Medidas</th><th>Cam.</th><th>Qtd</th><th>Unit.</th><th>X</th></tr></thead>
         <tbody id="corpoAtual"></tbody>
     </table>
+    
+    <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
+        <div><label>Frete</label><select id="frete"><option>POR CONTA DO CLIENTE</option><option>POR CONTA DA EMPRESA</option></select></div>
+        <div><label>Prazo Entrega</label><input type="text" id="prazo" value="10 DIAS ÚTEIS"></div>
+    </div>
+    <label>Forma de Pagamento</label><textarea id="pagamento">50% + BOLETO 28DD.</textarea>
+    
     <h3 style="text-align:right">Total: <span id="totalOrc">R$ 0,00</span></h3>
     <button class="btn" style="background:var(--primary)" onclick="salvarOrcamento()">SALVAR NO HISTÓRICO</button>
   </div>
@@ -116,12 +117,9 @@
   <div id="historico" class="section"><div id="listaOrcamentos"></div></div>
   <div id="pedidos" class="section"><div id="listaPedidos"></div></div>
   <div id="financeiro" class="section"><div id="listaBoletos"></div></div>
-
-  <div id="cfg" class="section">
-    <div id="listaCustos"></div>
+  <div id="cfg" class="section"><div id="listaCustos"></div>
     <div style="background:#eee; padding:10px; border-radius:8px; margin-top:10px;">
-        <input type="text" id="matNome" placeholder="Material">
-        <input type="number" id="matPreco" placeholder="Preço KG">
+        <input type="text" id="matNome" placeholder="Material"><input type="number" id="matPreco" placeholder="Preço KG">
         <button class="btn" style="background:var(--success)" onclick="addMaterial()">CADASTRAR MATERIAL</button>
     </div>
   </div>
@@ -136,14 +134,21 @@
   }
 
   function updateUI() {
-    const sel = document.getElementById('matSelect');
-    if(sel) sel.innerHTML = (window.marbeDB.custos.mats || []).map(m => `<option value="${m.p}">${m.n}</option>`).join('');
+    document.getElementById('matSelect').innerHTML = (window.marbeDB.custos.mats || []).map(m => `<option value="${m.p}">${m.n}</option>`).join('');
     renderOrcamentos(); renderPedidos(); renderBoletos(); renderCustos();
+  }
+
+  async function buscaCNPJ(v) {
+    const cnpj = v.replace(/\D/g, ''); if (cnpj.length !== 14) return;
+    try {
+      const r = await fetch(`https://brasilapi.com.br/api/cnpj/v1/${cnpj}`);
+      const d = await r.json();
+      document.getElementById('razao').value = d.razao_social || d.nome_fantasia || "";
+    } catch (e) {}
   }
 
   function calcular() {
     const d=parseFloat(document.getElementById('d').value), l=parseFloat(document.getElementById('l').value), e=parseFloat(document.getElementById('e').value), pk=parseFloat(document.getElementById('matSelect').value), h=parseFloat(document.getElementById('h').value), imp=parseFloat(document.getElementById('tipoServ').value);
-    if(isNaN(pk)) return alert("Cadastre um material primeiro na aba Custos!");
     const pesoUnit = Math.ceil((Math.PI*(d+e)*l*e)*1200/1000000000);
     const unit = (((pesoUnit*pk*1.1)+(h*window.marbeDB.custos.vh))*2.5)*(1+imp);
     itensTemp.push({ n: "Revestimento " + document.getElementById('matSelect').options[document.getElementById('matSelect').selectedIndex].text, med: d + "x" + l + "mm", e: e + "mm", q: 1, v: unit, kg_unit: pesoUnit });
@@ -167,10 +172,8 @@
   }
 
   function salvarOrcamento() {
-    if(!itensTemp.length) return alert("Adicione itens!");
-    window.marbeDB.orçamentos.push({ os: window.marbeDB.os, cliente: document.getElementById('razao').value || "Cliente", itens: JSON.parse(JSON.stringify(itensTemp)), total: itensTemp.reduce((a,b)=>a+(b.v*b.q),0) });
-    window.marbeDB.os++; window.salvarNuvem(); 
-    itensTemp = []; renderTabelaAtual(); tab('historico');
+    window.marbeDB.orçamentos.push({ os: window.marbeDB.os, cliente: document.getElementById('razao').value, itens: JSON.parse(JSON.stringify(itensTemp)), frete: document.getElementById('frete').value, prazo: document.getElementById('prazo').value, pagamento: document.getElementById('pagamento').value, total: itensTemp.reduce((a,b)=>a+(b.v*b.q),0) });
+    window.marbeDB.os++; window.salvarNuvem(); itensTemp = []; renderTabelaAtual(); tab('historico');
   }
 
   function renderOrcamentos() {
@@ -196,6 +199,10 @@
     } else {
         doc.text(`ORCAMENTO - OS: ${d.os} | CLIENTE: ${clean(d.cliente)}`, 20, 30);
         doc.autoTable({ startY: 40, head: [['DESCRICAO', 'MEDIDAS', 'QTD', 'TOTAL']], body: d.itens.map(i => [clean(i.n), i.med, i.q, (i.v*i.q).toFixed(2)]) });
+        const fY = doc.lastAutoTable.finalY + 10;
+        doc.text(`TOTAL: R$ ${d.total.toFixed(2)}`, 190, fY, {align:'right'});
+        doc.setFontSize(9); doc.text(`FRETE: ${clean(d.frete)} | PRAZO: ${clean(d.prazo)}`, 20, fY + 10);
+        doc.text(`PAGAMENTO: ${clean(d.pagamento)}`, 20, fY + 16);
     }
     window.baixarPDF(doc.output('blob'), d.os);
   }
@@ -220,7 +227,7 @@
     const nf = document.getElementById(`nf_${i}`).value;
     const qtd = parseInt(document.getElementById(`parc_${i}`).value);
     const dt = document.getElementById(`data_${i}`).value;
-    if(!nf || !qtd || !dt) return alert("Preencha NF, Parcelas e Data!");
+    if(!nf || !qtd || !dt) return alert("Erro");
     const p = window.marbeDB.pedidos[i];
     const dataBase = new Date(dt + "T12:00:00");
     for(let j=0; j<qtd; j++) {
@@ -239,12 +246,7 @@
   }
 
   function renderCustos() {
-    document.getElementById('listaCustos').innerHTML = (window.marbeDB.custos.mats || []).map((m, i) => `
-      <div style="display:flex; gap:10px; margin-bottom:5px;">
-        <input type="text" value="${m.n}" readonly style="flex:2">
-        <input type="number" value="${m.p}" readonly style="flex:1">
-        <button onclick="window.marbeDB.custos.mats.splice(${i},1); window.salvarNuvem()" style="background:red; color:white; border:none; padding:5px; border-radius:4px;">X</button>
-      </div>`).join('');
+    document.getElementById('listaCustos').innerHTML = (window.marbeDB.custos.mats || []).map((m, i) => `<div style="display:flex; gap:10px; margin-bottom:5px;"><input type="text" value="${m.n}" readonly style="flex:2"><input type="number" value="${m.p}" readonly style="flex:1"><button onclick="window.marbeDB.custos.mats.splice(${i},1); window.salvarNuvem()" style="background:red; color:white; border:none; padding:5px; border-radius:4px;">X</button></div>`).join('');
   }
 
   function addMaterial() {
